Cleaned up everything

--- a/src/README.md.jinja
+++ b/src/README.md.jinja
@@ -1,4 +1,4 @@
-<h1 align="center">{{ containername }} devcontainer</h1>
+<h1 align="center">{{ devcontainername }} devcontainer</h1>
 
 <div align="center">
 
@@ -19,10 +19,9 @@
 
 ## 💡 About
 
-Treat this `README.md` as the landing page for people
-that want to **use** your project.
-
-Write here whatever you want to tell them.
+This repository contains a [`Dev Container`](https://containers.dev)
+tailored for developing projects in
+[`{{ accountname }}`](https://github.com/{{ accountname }}).
 {%- if docs %}
 
 ## 📄 Further Reading
