--- a/src/flake.nix.jinja
+++ b/src/flake.nix.jinja
@@ -38,6 +38,7 @@
         node = pkgs.nodejs;
         nil = pkgs.nil;
         task = pkgs.go-task;
+        coreutils = pkgs.coreutils;
         trunk = pkgs.trunk-io;
         copier = pkgs.copier;
       in {
@@ -66,6 +67,7 @@
               node
               nil
               task
+              coreutils
               trunk
               copier
             ];
@@ -81,6 +83,7 @@
             packages = [
               node
               task
+              coreutils
             ];
 
             shellHook = ''
@@ -93,6 +96,7 @@
 
             packages = [
               task
+              coreutils
               copier
             ];
           };
@@ -105,6 +109,7 @@
               node
               {%- endif %}
               task
+              coreutils
               trunk
             ];
           };
@@ -116,6 +121,7 @@
             packages = [
               node
               task
+              coreutils
             ];
           };
           {%- endif %}
