--- a/src/{% if docs %}docs{% endif %}/docs/01-Index.md.jinja
+++ b/src/{% if docs %}docs{% endif %}/docs/01-Index.md.jinja
@@ -3,13 +3,12 @@ slug: /
 title: Index
 ---
 
-# {{ containername }} devcontainer
+# {{ devcontainername }} devcontainer
 
 {{ description }}
 
 ## 💡 About
 
-Treat this as the landing page for people
-that want to **use** your project.
-
-Write here whatever you want to tell them.
+This repository contains a [`Dev Container`](https://containers.dev)
+tailored for developing projects in
+[`{{ accountname }}`](https://github.com/{{ accountname }}).
