--- a/src/.gitattributes.jinja
+++ b/src/.gitattributes.jinja
@@ -1,6 +1,8 @@
-# Take only files in src into account for language stats
+# Mark everything as vendored
 * linguist-vendored
 {%- if docs %}
+# Treat docs as documentation
 docs/** -linguist-vendored linguist-documentation
 {%- endif %}
+# Unmark files in src, so that they are included in language stats
 src/** -linguist-vendored
