--- a/src/Taskfile.dist.yaml.jinja
+++ b/src/Taskfile.dist.yaml.jinja
@@ -56,13 +56,13 @@ tasks:
         rm
         --recursive
         --force
-        ./node_modules
+        node_modules
     status:
       - >
         test
         '!'
         -d
-        ./node_modules
+        node_modules
   install-docs:
     desc: Install docs dependencies
     dir: docs
@@ -135,13 +135,13 @@ tasks:
         rm
         --recursive
         --force
-        ./node_modules
+        node_modules
     status:
       - >
         test
         '!'
         -d
-        ./node_modules
+        node_modules
   install:
     desc: Install dependencies
     sources:
