--- a/src/.gitattributes.jinja
+++ b/src/.gitattributes.jinja
@@ -2,7 +2,7 @@
 * linguist-vendored
 {%- if docs %}
 # Treat docs as documentation
-docs/** -linguist-vendored linguist-documentation
+/docs/** -linguist-vendored linguist-documentation
 {%- endif %}
 # Unmark files in src, so that they are included in language stats
-src/** -linguist-vendored
+/src/** -linguist-vendored
