--- a/src/{% if true %}.github{% endif %}/workflows/{% if registry %}registry.yaml{% endif %}.jinja
+++ b/src/{% if true %}.github{% endif %}/workflows/{% if registry %}registry.yaml{% endif %}.jinja
@@ -1,4 +1,3 @@
----
 name: Registry
 
 # Put 'on' in quotes to avoid YAML parsing error
@@ -16,7 +15,7 @@ jobs:
     # Use reasonable timeout to avoid stuck workflows
     timeout-minutes: 30
     env:
-      NIX_CACHE_DIR: /home/runner/.nixcache
+      NIX_CACHE_DIR: /home/runner/.nixcache/
     permissions:
       # Needed to checkout code
       contents: read
@@ -24,7 +23,7 @@ jobs:
       packages: write
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4.1.0
+        uses: actions/checkout@v4.1.1
       - name: Setup Nix cache
         uses: actions/cache@v3.3.2
         id: cache-nix
@@ -32,10 +31,10 @@ jobs:
           path: {{ '${{ env.NIX_CACHE_DIR }}' }}
           key: registry-nix
       - name: Install Nix
-        uses: cachix/install-nix-action@v22
+        uses: cachix/install-nix-action@v23
         with:
           github_access_token: {{ '${{ github.token }}' }}
-          install_url: https://releases.nixos.org/nix/nix-2.18.0/install
+          install_url: https://releases.nixos.org/nix/nix-2.18.1/install
       # See: https://github.com/cachix/install-nix-action/issues/56
       - name: Import Nix store cache
         if: steps.cache-nix.outputs.cache-hit == 'true'
@@ -81,5 +80,5 @@ jobs:
           {{ '${{ env.NIX_CACHE_DIR }}' }}
           &&
           nix-store
-          --export $(find /nix/store -maxdepth 1 -name '*-*')
+          --export $(find /nix/store/ -maxdepth 1 -name '*-*')
           > {{ '${{ env.NIX_CACHE_DIR }}' }}/archive.nar
