Fetched tempalate changes and updated dependencies

--- a/src/flake.nix.jinja
+++ b/src/flake.nix.jinja
@@ -73,6 +73,7 @@
             ];
 
             shellHook = ''
+              export TMPDIR=/tmp
               task install
             '';
           };
@@ -87,6 +88,7 @@
             ];
 
             shellHook = ''
+              export TMPDIR=/tmp
               task install
             '';
           };
@@ -99,6 +101,10 @@
               coreutils
               copier
             ];
+
+            shellHook = ''
+              export TMPDIR=/tmp
+            '';
           };
 
           lint = pkgs.mkShell {
@@ -112,6 +118,10 @@
               coreutils
               trunk
             ];
+
+            shellHook = ''
+              export TMPDIR=/tmp
+            '';
           };
           {%- if docs %}
 
@@ -123,6 +133,10 @@
               task
               coreutils
             ];
+
+            shellHook = ''
+              export TMPDIR=/tmp
+            '';
           };
           {%- endif %}
         };
