--- a/src/{% if true %}.github{% endif %}/workflows/{% if registry %}registry.yaml{% endif %}.jinja
+++ b/src/{% if true %}.github{% endif %}/workflows/{% if registry %}registry.yaml{% endif %}.jinja
@@ -76,7 +76,7 @@ jobs:
         if: "!cancelled()"
         run: >
           mkdir
-          -p
+          --parents
           {{ '${{ env.NIX_CACHE_DIR }}' }}
           &&
           nix-store
