Fetched template changes

--- a/src/CONTRIBUTING.md.jinja
+++ b/src/CONTRIBUTING.md.jinja
@@ -109,7 +109,7 @@ so you can format with it by using any editor formatting features.
 
 ## 🔧 Building
 
-To build the `Dev Container`, you can run the following command:
+You can use the following command to build the `Dev Container`:
 
 ```sh
 task build
