--- a/src/README.md.jinja
+++ b/src/README.md.jinja
@@ -19,9 +19,7 @@
 
 ## 💡 About
 
-This repository contains a [`Dev Container`](https://containers.dev)
-tailored for developing projects in
-[`{{ accountname }}`](https://github.com/{{ accountname }}).
+`{{ devcontainername }}` is a [`Dev Container`](https://containers.dev).
 {%- if docs %}
 
 ## 📄 Further Reading
