--- a/src/{% if docs %}docs{% endif %}/docs/01-Index.md.jinja
+++ b/src/{% if docs %}docs{% endif %}/docs/01-Index.md.jinja
@@ -9,6 +9,4 @@ title: Index
 
 ## 💡 About
 
-This repository contains a [`Dev Container`](https://containers.dev)
-tailored for developing projects in
-[`{{ accountname }}`](https://github.com/{{ accountname }}).
+`{{ devcontainername }}` is a [`Dev Container`](https://containers.dev).
